--- a/ui.html
+++ b/ui.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glowing Orb</title>
+    <title>Glowing Orb Button</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="glowing-orb"></div>
+    <button class="glowing-orb"></button>
+    <script src="design.js"></script>
 </body>
 </html>
